--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "stripe-samples",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
-    "stripe": "^18.0.0",
-    "cors": "^2.8.5",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "prom-client": "^15.1.3",
+    "stripe": "^18.0.0"
   }
 }
